while_f_parser/parser.output
Grammar

    0 $accept: NT_gil $end

    1 NT_gil: NT_gi TM_SEMICOL NT_gil
    2       | NT_gi

    3 NT_el: NT_EXPR TM_comma NT_el
    4      | NT_EXPR

    5 NT_vl: TM_IDENT TM_comma NT_vl
    6      | TM_IDENT

    7 NT_CMD: TM_VAR TM_IDENT TM_SEMICOL NT_CMD
    8       | NT_EXPR TM_ASGNOP NT_EXPR
    9       | NT_CMD TM_SEMICOL NT_CMD
   10       | TM_IF TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN TM_THEN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE TM_ELSE TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE
   11       | TM_WHILE TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN TM_DO TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE
   12       | TM_for TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE
   13       | TM_DO TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE TM_WHILE TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN
   14       | TM_IDENT TM_LEFT_PAREN NT_el TM_RIGHT_PAREN
   15       | TM_IDENT TM_LEFT_PAREN TM_RIGHT_PAREN
   16       | TM_continue
   17       | TM_break
   18       | TM_return TM_IDENT

   19 NT_EXPR: TM_NAT
   20        | TM_IDENT
   21        | TM_MINUS NT_EXPR
   22        | TM_MUL NT_EXPR
   23        | NT_EXPR TM_MUL NT_EXPR
   24        | NT_EXPR TM_PLUS NT_EXPR
   25        | NT_EXPR TM_MINUS NT_EXPR
   26        | NT_EXPR TM_DIV NT_EXPR
   27        | NT_EXPR TM_MOD NT_EXPR
   28        | NT_EXPR TM_LT NT_EXPR
   29        | NT_EXPR TM_GT NT_EXPR
   30        | NT_EXPR TM_LE NT_EXPR
   31        | NT_EXPR TM_GE NT_EXPR
   32        | NT_EXPR TM_EQ NT_EXPR
   33        | NT_EXPR TM_NE NT_EXPR
   34        | NT_EXPR TM_AND NT_EXPR
   35        | NT_EXPR TM_OR NT_EXPR
   36        | TM_NOT NT_EXPR
   37        | TM_and NT_EXPR
   38        | TM_IDENT TM_LEFT_PAREN NT_el TM_RIGHT_PAREN
   39        | TM_IDENT TM_LEFT_PAREN TM_RIGHT_PAREN

   40 NT_gi: TM_VAR TM_IDENT
   41      | TM_func TM_IDENT TM_LEFT_PAREN NT_vl TM_RIGHT_PAREN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE
   42      | TM_proc TM_IDENT TM_LEFT_PAREN NT_vl TM_RIGHT_PAREN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE
   43      | TM_func TM_IDENT TM_LEFT_PAREN TM_RIGHT_PAREN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE
   44      | TM_proc TM_IDENT TM_LEFT_PAREN TM_RIGHT_PAREN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE
   45      | TM_NAT_RE TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE
   46      | TM_IDENT_RE TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE
   47      | TM_BLANK_RE TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE
   48      | TM_KEYWORD TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE
   49      | TM_SYMBOL TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    TM_NAT <n> (258) 19
    TM_IDENT <i> (259) 5 6 7 14 15 18 20 38 39 40 41 42 43 44
    TM_KEYWORD <i> (260) 48
    TM_SYMBOL <i> (261) 49
    TM_LEFT_BRACE <none> (262) 10 11 12 13 41 42 43 44 45 46 47 48 49
    TM_RIGHT_BRACE <none> (263) 10 11 12 13 41 42 43 44 45 46 47 48 49
    TM_LEFT_PAREN <none> (264) 10 11 12 13 14 15 38 39 41 42 43 44
    TM_RIGHT_PAREN <none> (265) 10 11 12 13 14 15 38 39 41 42 43 44
    TM_SEMICOL <none> (266) 1 7 9
    TM_VAR <none> (267) 7 40
    TM_IF <none> (268) 10
    TM_THEN <none> (269) 10
    TM_ELSE <none> (270) 10
    TM_WHILE <none> (271) 11 13
    TM_DO <none> (272) 11 13
    TM_ASGNOP <none> (273) 8
    TM_OR <none> (274) 35
    TM_AND <none> (275) 34
    TM_NOT <none> (276) 36
    TM_LT <none> (277) 28
    TM_LE <none> (278) 30
    TM_GT <none> (279) 29
    TM_GE <none> (280) 31
    TM_EQ <none> (281) 32
    TM_NE <none> (282) 33
    TM_PLUS <none> (283) 24
    TM_MINUS <none> (284) 21 25
    TM_MUL <none> (285) 22 23
    TM_DIV <none> (286) 26
    TM_MOD <none> (287) 27
    TM_UMINUS <none> (288)
    TM_DEREF <none> (289)
    TM_func <none> (290) 41 43
    TM_proc <none> (291) 42 44
    TM_continue <none> (292) 16
    TM_break <none> (293) 17
    TM_return <none> (294) 18
    TM_comma <none> (295) 3 5
    TM_and <none> (296) 37
    TM_for <none> (297) 12
    TM_NAT_RE <none> (298) 45
    TM_IDENT_RE <none> (299) 46
    TM_BLANK_RE <none> (300) 47


Nonterminals, with rules where they appear

    $accept (46)
        on left: 0
    NT_gil <f> (47)
        on left: 1 2
        on right: 0 1
    NT_el <h> (48)
        on left: 3 4
        on right: 3 14 38
    NT_vl <k> (49)
        on left: 5 6
        on right: 5 41 42
    NT_CMD <c> (50)
        on left: 7 8 9 10 11 12 13 14 15 16 17 18
        on right: 7 9 10 11 12 13 41 42 43 44 45 46 47 48 49
    NT_EXPR <e> (51)
        on left: 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39
        on right: 3 4 8 10 11 12 13 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37
    NT_gi <g> (52)
        on left: 40 41 42 43 44 45 46 47 48 49
        on right: 1 2


State 0

    0 $accept: • NT_gil $end

    TM_KEYWORD   shift, and go to state 1
    TM_SYMBOL    shift, and go to state 2
    TM_VAR       shift, and go to state 3
    TM_func      shift, and go to state 4
    TM_proc      shift, and go to state 5
    TM_NAT_RE    shift, and go to state 6
    TM_IDENT_RE  shift, and go to state 7
    TM_BLANK_RE  shift, and go to state 8

    NT_gil  go to state 9
    NT_gi   go to state 10


State 1

   48 NT_gi: TM_KEYWORD • TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE

    TM_LEFT_BRACE  shift, and go to state 11


State 2

   49 NT_gi: TM_SYMBOL • TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE

    TM_LEFT_BRACE  shift, and go to state 12


State 3

   40 NT_gi: TM_VAR • TM_IDENT

    TM_IDENT  shift, and go to state 13


State 4

   41 NT_gi: TM_func • TM_IDENT TM_LEFT_PAREN NT_vl TM_RIGHT_PAREN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE
   43      | TM_func • TM_IDENT TM_LEFT_PAREN TM_RIGHT_PAREN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE

    TM_IDENT  shift, and go to state 14


State 5

   42 NT_gi: TM_proc • TM_IDENT TM_LEFT_PAREN NT_vl TM_RIGHT_PAREN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE
   44      | TM_proc • TM_IDENT TM_LEFT_PAREN TM_RIGHT_PAREN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE

    TM_IDENT  shift, and go to state 15


State 6

   45 NT_gi: TM_NAT_RE • TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE

    TM_LEFT_BRACE  shift, and go to state 16


State 7

   46 NT_gi: TM_IDENT_RE • TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE

    TM_LEFT_BRACE  shift, and go to state 17


State 8

   47 NT_gi: TM_BLANK_RE • TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE

    TM_LEFT_BRACE  shift, and go to state 18


State 9

    0 $accept: NT_gil • $end

    $end  shift, and go to state 19


State 10

    1 NT_gil: NT_gi • TM_SEMICOL NT_gil
    2       | NT_gi •

    TM_SEMICOL  shift, and go to state 20

    $default  reduce using rule 2 (NT_gil)


State 11

   48 NT_gi: TM_KEYWORD TM_LEFT_BRACE • NT_CMD TM_RIGHT_BRACE

    TM_NAT       shift, and go to state 21
    TM_IDENT     shift, and go to state 22
    TM_VAR       shift, and go to state 23
    TM_IF        shift, and go to state 24
    TM_WHILE     shift, and go to state 25
    TM_DO        shift, and go to state 26
    TM_NOT       shift, and go to state 27
    TM_MINUS     shift, and go to state 28
    TM_MUL       shift, and go to state 29
    TM_continue  shift, and go to state 30
    TM_break     shift, and go to state 31
    TM_return    shift, and go to state 32
    TM_and       shift, and go to state 33
    TM_for       shift, and go to state 34

    NT_CMD   go to state 35
    NT_EXPR  go to state 36


State 12

   49 NT_gi: TM_SYMBOL TM_LEFT_BRACE • NT_CMD TM_RIGHT_BRACE

    TM_NAT       shift, and go to state 21
    TM_IDENT     shift, and go to state 22
    TM_VAR       shift, and go to state 23
    TM_IF        shift, and go to state 24
    TM_WHILE     shift, and go to state 25
    TM_DO        shift, and go to state 26
    TM_NOT       shift, and go to state 27
    TM_MINUS     shift, and go to state 28
    TM_MUL       shift, and go to state 29
    TM_continue  shift, and go to state 30
    TM_break     shift, and go to state 31
    TM_return    shift, and go to state 32
    TM_and       shift, and go to state 33
    TM_for       shift, and go to state 34

    NT_CMD   go to state 37
    NT_EXPR  go to state 36


State 13

   40 NT_gi: TM_VAR TM_IDENT •

    $default  reduce using rule 40 (NT_gi)


State 14

   41 NT_gi: TM_func TM_IDENT • TM_LEFT_PAREN NT_vl TM_RIGHT_PAREN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE
   43      | TM_func TM_IDENT • TM_LEFT_PAREN TM_RIGHT_PAREN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE

    TM_LEFT_PAREN  shift, and go to state 38


State 15

   42 NT_gi: TM_proc TM_IDENT • TM_LEFT_PAREN NT_vl TM_RIGHT_PAREN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE
   44      | TM_proc TM_IDENT • TM_LEFT_PAREN TM_RIGHT_PAREN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE

    TM_LEFT_PAREN  shift, and go to state 39


State 16

   45 NT_gi: TM_NAT_RE TM_LEFT_BRACE • NT_CMD TM_RIGHT_BRACE

    TM_NAT       shift, and go to state 21
    TM_IDENT     shift, and go to state 22
    TM_VAR       shift, and go to state 23
    TM_IF        shift, and go to state 24
    TM_WHILE     shift, and go to state 25
    TM_DO        shift, and go to state 26
    TM_NOT       shift, and go to state 27
    TM_MINUS     shift, and go to state 28
    TM_MUL       shift, and go to state 29
    TM_continue  shift, and go to state 30
    TM_break     shift, and go to state 31
    TM_return    shift, and go to state 32
    TM_and       shift, and go to state 33
    TM_for       shift, and go to state 34

    NT_CMD   go to state 40
    NT_EXPR  go to state 36


State 17

   46 NT_gi: TM_IDENT_RE TM_LEFT_BRACE • NT_CMD TM_RIGHT_BRACE

    TM_NAT       shift, and go to state 21
    TM_IDENT     shift, and go to state 22
    TM_VAR       shift, and go to state 23
    TM_IF        shift, and go to state 24
    TM_WHILE     shift, and go to state 25
    TM_DO        shift, and go to state 26
    TM_NOT       shift, and go to state 27
    TM_MINUS     shift, and go to state 28
    TM_MUL       shift, and go to state 29
    TM_continue  shift, and go to state 30
    TM_break     shift, and go to state 31
    TM_return    shift, and go to state 32
    TM_and       shift, and go to state 33
    TM_for       shift, and go to state 34

    NT_CMD   go to state 41
    NT_EXPR  go to state 36


State 18

   47 NT_gi: TM_BLANK_RE TM_LEFT_BRACE • NT_CMD TM_RIGHT_BRACE

    TM_NAT       shift, and go to state 21
    TM_IDENT     shift, and go to state 22
    TM_VAR       shift, and go to state 23
    TM_IF        shift, and go to state 24
    TM_WHILE     shift, and go to state 25
    TM_DO        shift, and go to state 26
    TM_NOT       shift, and go to state 27
    TM_MINUS     shift, and go to state 28
    TM_MUL       shift, and go to state 29
    TM_continue  shift, and go to state 30
    TM_break     shift, and go to state 31
    TM_return    shift, and go to state 32
    TM_and       shift, and go to state 33
    TM_for       shift, and go to state 34

    NT_CMD   go to state 42
    NT_EXPR  go to state 36


State 19

    0 $accept: NT_gil $end •

    $default  accept


State 20

    1 NT_gil: NT_gi TM_SEMICOL • NT_gil

    TM_KEYWORD   shift, and go to state 1
    TM_SYMBOL    shift, and go to state 2
    TM_VAR       shift, and go to state 3
    TM_func      shift, and go to state 4
    TM_proc      shift, and go to state 5
    TM_NAT_RE    shift, and go to state 6
    TM_IDENT_RE  shift, and go to state 7
    TM_BLANK_RE  shift, and go to state 8

    NT_gil  go to state 43
    NT_gi   go to state 10


State 21

   19 NT_EXPR: TM_NAT •

    $default  reduce using rule 19 (NT_EXPR)


State 22

   14 NT_CMD: TM_IDENT • TM_LEFT_PAREN NT_el TM_RIGHT_PAREN
   15       | TM_IDENT • TM_LEFT_PAREN TM_RIGHT_PAREN
   20 NT_EXPR: TM_IDENT •
   38        | TM_IDENT • TM_LEFT_PAREN NT_el TM_RIGHT_PAREN
   39        | TM_IDENT • TM_LEFT_PAREN TM_RIGHT_PAREN

    TM_LEFT_PAREN  shift, and go to state 44

    $default  reduce using rule 20 (NT_EXPR)


State 23

    7 NT_CMD: TM_VAR • TM_IDENT TM_SEMICOL NT_CMD

    TM_IDENT  shift, and go to state 45


State 24

   10 NT_CMD: TM_IF • TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN TM_THEN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE TM_ELSE TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE

    TM_LEFT_PAREN  shift, and go to state 46


State 25

   11 NT_CMD: TM_WHILE • TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN TM_DO TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE

    TM_LEFT_PAREN  shift, and go to state 47


State 26

   13 NT_CMD: TM_DO • TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE TM_WHILE TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN

    TM_LEFT_BRACE  shift, and go to state 48


State 27

   36 NT_EXPR: TM_NOT • NT_EXPR

    TM_NAT    shift, and go to state 21
    TM_IDENT  shift, and go to state 49
    TM_NOT    shift, and go to state 27
    TM_MINUS  shift, and go to state 28
    TM_MUL    shift, and go to state 29
    TM_and    shift, and go to state 33

    NT_EXPR  go to state 50


State 28

   21 NT_EXPR: TM_MINUS • NT_EXPR

    TM_NAT    shift, and go to state 21
    TM_IDENT  shift, and go to state 49
    TM_NOT    shift, and go to state 27
    TM_MINUS  shift, and go to state 28
    TM_MUL    shift, and go to state 29
    TM_and    shift, and go to state 33

    NT_EXPR  go to state 51


State 29

   22 NT_EXPR: TM_MUL • NT_EXPR

    TM_NAT    shift, and go to state 21
    TM_IDENT  shift, and go to state 49
    TM_NOT    shift, and go to state 27
    TM_MINUS  shift, and go to state 28
    TM_MUL    shift, and go to state 29
    TM_and    shift, and go to state 33

    NT_EXPR  go to state 52


State 30

   16 NT_CMD: TM_continue •

    $default  reduce using rule 16 (NT_CMD)


State 31

   17 NT_CMD: TM_break •

    $default  reduce using rule 17 (NT_CMD)


State 32

   18 NT_CMD: TM_return • TM_IDENT

    TM_IDENT  shift, and go to state 53


State 33

   37 NT_EXPR: TM_and • NT_EXPR

    TM_NAT    shift, and go to state 21
    TM_IDENT  shift, and go to state 49
    TM_NOT    shift, and go to state 27
    TM_MINUS  shift, and go to state 28
    TM_MUL    shift, and go to state 29
    TM_and    shift, and go to state 33

    NT_EXPR  go to state 54


State 34

   12 NT_CMD: TM_for • TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE

    TM_LEFT_BRACE  shift, and go to state 55


State 35

    9 NT_CMD: NT_CMD • TM_SEMICOL NT_CMD
   48 NT_gi: TM_KEYWORD TM_LEFT_BRACE NT_CMD • TM_RIGHT_BRACE

    TM_RIGHT_BRACE  shift, and go to state 56
    TM_SEMICOL      shift, and go to state 57


State 36

    8 NT_CMD: NT_EXPR • TM_ASGNOP NT_EXPR
   23 NT_EXPR: NT_EXPR • TM_MUL NT_EXPR
   24        | NT_EXPR • TM_PLUS NT_EXPR
   25        | NT_EXPR • TM_MINUS NT_EXPR
   26        | NT_EXPR • TM_DIV NT_EXPR
   27        | NT_EXPR • TM_MOD NT_EXPR
   28        | NT_EXPR • TM_LT NT_EXPR
   29        | NT_EXPR • TM_GT NT_EXPR
   30        | NT_EXPR • TM_LE NT_EXPR
   31        | NT_EXPR • TM_GE NT_EXPR
   32        | NT_EXPR • TM_EQ NT_EXPR
   33        | NT_EXPR • TM_NE NT_EXPR
   34        | NT_EXPR • TM_AND NT_EXPR
   35        | NT_EXPR • TM_OR NT_EXPR

    TM_ASGNOP  shift, and go to state 58
    TM_OR      shift, and go to state 59
    TM_AND     shift, and go to state 60
    TM_LT      shift, and go to state 61
    TM_LE      shift, and go to state 62
    TM_GT      shift, and go to state 63
    TM_GE      shift, and go to state 64
    TM_EQ      shift, and go to state 65
    TM_NE      shift, and go to state 66
    TM_PLUS    shift, and go to state 67
    TM_MINUS   shift, and go to state 68
    TM_MUL     shift, and go to state 69
    TM_DIV     shift, and go to state 70
    TM_MOD     shift, and go to state 71


State 37

    9 NT_CMD: NT_CMD • TM_SEMICOL NT_CMD
   49 NT_gi: TM_SYMBOL TM_LEFT_BRACE NT_CMD • TM_RIGHT_BRACE

    TM_RIGHT_BRACE  shift, and go to state 72
    TM_SEMICOL      shift, and go to state 57


State 38

   41 NT_gi: TM_func TM_IDENT TM_LEFT_PAREN • NT_vl TM_RIGHT_PAREN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE
   43      | TM_func TM_IDENT TM_LEFT_PAREN • TM_RIGHT_PAREN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE

    TM_IDENT        shift, and go to state 73
    TM_RIGHT_PAREN  shift, and go to state 74

    NT_vl  go to state 75


State 39

   42 NT_gi: TM_proc TM_IDENT TM_LEFT_PAREN • NT_vl TM_RIGHT_PAREN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE
   44      | TM_proc TM_IDENT TM_LEFT_PAREN • TM_RIGHT_PAREN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE

    TM_IDENT        shift, and go to state 73
    TM_RIGHT_PAREN  shift, and go to state 76

    NT_vl  go to state 77


State 40

    9 NT_CMD: NT_CMD • TM_SEMICOL NT_CMD
   45 NT_gi: TM_NAT_RE TM_LEFT_BRACE NT_CMD • TM_RIGHT_BRACE

    TM_RIGHT_BRACE  shift, and go to state 78
    TM_SEMICOL      shift, and go to state 57


State 41

    9 NT_CMD: NT_CMD • TM_SEMICOL NT_CMD
   46 NT_gi: TM_IDENT_RE TM_LEFT_BRACE NT_CMD • TM_RIGHT_BRACE

    TM_RIGHT_BRACE  shift, and go to state 79
    TM_SEMICOL      shift, and go to state 57


State 42

    9 NT_CMD: NT_CMD • TM_SEMICOL NT_CMD
   47 NT_gi: TM_BLANK_RE TM_LEFT_BRACE NT_CMD • TM_RIGHT_BRACE

    TM_RIGHT_BRACE  shift, and go to state 80
    TM_SEMICOL      shift, and go to state 57


State 43

    1 NT_gil: NT_gi TM_SEMICOL NT_gil •

    $default  reduce using rule 1 (NT_gil)


State 44

   14 NT_CMD: TM_IDENT TM_LEFT_PAREN • NT_el TM_RIGHT_PAREN
   15       | TM_IDENT TM_LEFT_PAREN • TM_RIGHT_PAREN
   38 NT_EXPR: TM_IDENT TM_LEFT_PAREN • NT_el TM_RIGHT_PAREN
   39        | TM_IDENT TM_LEFT_PAREN • TM_RIGHT_PAREN

    TM_NAT          shift, and go to state 21
    TM_IDENT        shift, and go to state 49
    TM_RIGHT_PAREN  shift, and go to state 81
    TM_NOT          shift, and go to state 27
    TM_MINUS        shift, and go to state 28
    TM_MUL          shift, and go to state 29
    TM_and          shift, and go to state 33

    NT_el    go to state 82
    NT_EXPR  go to state 83


State 45

    7 NT_CMD: TM_VAR TM_IDENT • TM_SEMICOL NT_CMD

    TM_SEMICOL  shift, and go to state 84


State 46

   10 NT_CMD: TM_IF TM_LEFT_PAREN • NT_EXPR TM_RIGHT_PAREN TM_THEN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE TM_ELSE TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE

    TM_NAT    shift, and go to state 21
    TM_IDENT  shift, and go to state 49
    TM_NOT    shift, and go to state 27
    TM_MINUS  shift, and go to state 28
    TM_MUL    shift, and go to state 29
    TM_and    shift, and go to state 33

    NT_EXPR  go to state 85


State 47

   11 NT_CMD: TM_WHILE TM_LEFT_PAREN • NT_EXPR TM_RIGHT_PAREN TM_DO TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE

    TM_NAT    shift, and go to state 21
    TM_IDENT  shift, and go to state 49
    TM_NOT    shift, and go to state 27
    TM_MINUS  shift, and go to state 28
    TM_MUL    shift, and go to state 29
    TM_and    shift, and go to state 33

    NT_EXPR  go to state 86


State 48

   13 NT_CMD: TM_DO TM_LEFT_BRACE • NT_CMD TM_RIGHT_BRACE TM_WHILE TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN

    TM_NAT       shift, and go to state 21
    TM_IDENT     shift, and go to state 22
    TM_VAR       shift, and go to state 23
    TM_IF        shift, and go to state 24
    TM_WHILE     shift, and go to state 25
    TM_DO        shift, and go to state 26
    TM_NOT       shift, and go to state 27
    TM_MINUS     shift, and go to state 28
    TM_MUL       shift, and go to state 29
    TM_continue  shift, and go to state 30
    TM_break     shift, and go to state 31
    TM_return    shift, and go to state 32
    TM_and       shift, and go to state 33
    TM_for       shift, and go to state 34
